--- a/index.html
+++ b/index.html
@@ -4,23 +4,81 @@
  <meta charset="UTF-8">
  <title>Телебачення і онлайн кинотеатр тільки у SWEET.TV!</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</style>
+<link rel="stylesheet" href="styles/style.css">
  </head>
  <body>
- <center><strong>
-  <a href="file:///C:/Users/%D0%94%D0%BE%D0%BC%D0%BE%D0%B2%D0%BE%D0%B9/Desktop/index.html">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Sweet.tv_logo.svg/2560px-Sweet.tv_logo.svg.png" alt="sweet.tv" width="140" height="26">
-                </a>
-  <h1> Світові новинки кіно та телебачення на SWEET.TV</h1>
-  <h2> Підключити безкоштовні 7 днів </h2></strong></center>
-<img src="https://sweet-tv-static.sweet.tv/web/v2/home/block_2-UA-en-1729173052.png"alt="" width="550" height="400">
-<p><img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/flash.svg" 
-alt="підключення" width="40" height="40" class="main-page-ua__header-info-options-option-icon"></p>
-<p>Просте підключення</p>
-<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/interface.svg" alt="інтерфейс" width="40" height="40">
-<p>Зрозумілий інтерфейс</p>
-<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/collection.svg" alt="оновлення" width="40" height="40">
-<p>Постійне оновлення</p>
-<p><b>Дивись на будь-якому пристрої</b></p>
-<p>Підключай одночасно на 5 пристроях. Додаток можна встановити на телевізор, смартфон, ноутбук, планшет чи на Xbox</p>
- </body>
+
+	<center><strong>
+<header class="header-seo">
+	<div class="logo">
+		<a href="file:///C:/Users/%D0%94%D0%BE%D0%BC%D0%BE%D0%B2%D0%BE%D0%B9/Desktop/web-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/index.html">
+		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Sweet.tv_logo.svg/2560px-Sweet.tv_logo.svg.png" alt="sweet.tv" width="140" height="26"></a>
+	</div>
+	<div class="routes">
+		ТБ Безкоштовне ТБ Фільми Мультики Серіали Приставка Тарифи Спробувати безкоштовно                   
+	</div>
+	<div class="free">
+		Спробувати безкоштовно                   
+	</div>
+</header>
+ .
+<h1><p> Світові новинки кіно та телебачення на SWEET.TV</p></h1>
+   	<h2> Підключити безкоштовні 7 днів </h2>
+
+ 	 <img src="https://sweet-tv-static.sweet.tv/web/v2/home/block_2-UA-en-1729173052.png"alt="" width="550" height="400">
+</strong></center>
+<div class="black">
+<div class="Easy connection">
+	<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/flash.svg" alt="tablet" width="48" height="48">
+	<class="Easy connection>"Просте підключення
+	</div>
+<div class="Clear interface">
+	<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/interface.svg" alt="інтерфейс" width="40" height="40">
+	<class="Clear interface>"Зрозумілий інтерфейс
+	</div>
+<div class="Constant update">
+	<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/collection.svg" alt="оновлення" width="40" height="40">
+	<class="Constant update">Постійне оновлення 
+	</div>
+<div class="">
+	<p><b>Дивись на будь-якому пристрої</b></p>
+	<p>Підключай одночасно на 5 пристроях. Додаток можна встановити на телевізор, смартфон, ноутбук, планшет чи на Xbox</p>
+        </div></div>
+		<h3>Що входить у тариф SWEET.TV?</h2>
+
+
+
+<div data-aos="fade-up"> 
+		<h3>414 каналів</h3>
+	<div class="m2__what-text">
+		<div class="m2__what-item">
+			<b>Національне та преміальне ТБ</b>
+			<p>Дивись національні, фільмові, преміальні, дитячі, спортивні та інші телеканали</p>
+		</div>
+		<div class="m2__what-item">
+			<b>Керуй прямим ефіром</b>
+			<p>Перемотуй, став на паузу та продовжуй перегляд пізніше</p>
+		</div>
+		<div class="m2__what-item">
+			<b>Передачі в записі до 7 днів</b>
+			<p>Більше не треба поспішати, щоб встигнути на початок програми</p>
+		</div>
+	</div>
+</div>
+<div class="Photo" >
+                <h3><p>Щомісяця світові прем'єри від голлівудських студій на SWEET.TV</p></h3>             
+<img src="https://static.sweet.tv/images/cache6/posters/BDOO6AISAJ2WWKQCBABA====/298443-dedpul-i-rosomaha.jpg" width="154" height="229">
+<img src="https://static.sweet.tv/images/cache6/posters/BCZO4AISAJ2WWKQCBABA====/298305-zaberi-mene-na-misyac.jpg" width="154" height="229">
+<img src="https://static.sweet.tv/images/cache6/posters/BC7OOAISAJ2WWKQCBABA====/284158-korolivstvo-planeti-mavp.jpg"  width="154" height="229">
+<img src="https://static.sweet.tv/images/cache6/posters/BDJ64AISAJ2WWKQCBABA====/281514-mahhhin.jpg"  width="154" height="229">
+<img src="https://static.sweet.tv/images/cache6/posters/BC7LCAISAJ2WWKQCBABA====/22718-raya-ta-ostanniy-drakon.jpg"  width="154" height="229">
+<img src="https://static.sweet.tv/images/cache6/posters/BCZOYAISAJ2WWKQCBABA====/298326-kaskader.jpg"  width="154" height="229">
+<img src="https://static.sweet.tv/images/cache6/posters/BCYOYAISAJ2WWKQCBABA====/298248-ebigeyl.jpg" width="154" height="229">
+<img src="https://static.sweet.tv/images/cache6/posters/BCO6GAISAJ2WWKQCBABA====/298353-smerchi.jpg"  width="154" height="229">
+<img src="https://static.sweet.tv/images/cache6/posters/BCIOKAISAJ2WWKQCBABA====/298296-tihe-misce-den-pershiy.jpg"  width="154" height="229">
+<img src="https://static.sweet.tv/images/cache6/posters/BC26KAISAJ2WWKQCBABA====/284167-garfild-u-kino.jpg" width="154" height="229">
+</div>
+</body>
 </html>
+
