adding a chat icon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  </head>
  <body>
 
-	<center><strong>
+
 <header class="header-seo">
 	<div class="logo">
 		<a href="file:///C:/Users/%D0%94%D0%BE%D0%BC%D0%BE%D0%B2%D0%BE%D0%B9/Desktop/web-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/index.html">
@@ -27,7 +27,6 @@
    	<h2> Підключити безкоштовні 7 днів </h2>
 
  	 <img src="https://sweet-tv-static.sweet.tv/web/v2/home/block_2-UA-en-1729173052.png"alt="" width="550" height="400">
-</strong></center>
 <div class="black">
 <div class="Easy connection">
 	<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/flash.svg" alt="tablet" width="48" height="48">
@@ -45,8 +44,12 @@
 	<p><b>Дивись на будь-якому пристрої</b></p>
 	<p>Підключай одночасно на 5 пристроях. Додаток можна встановити на телевізор, смартфон, ноутбук, планшет чи на Xbox</p>
         </div></div>
-		<h3>Що входить у тариф SWEET.TV?</h2>
-
+	<div class="chat">
+	<div class="chat-icon">
+		<img src="https://www.pngmart.com/files/23/Chat-Icon-PNG-HD.png" alt="sweet.tv" width="45" height="45">
+	</div>                
+	</div>
+	<h3>Що входить у тариф SWEET.TV?</h2>
 
 
 <div data-aos="fade-up"> 
@@ -79,6 +82,8 @@
 <img src="https://static.sweet.tv/images/cache6/posters/BCIOKAISAJ2WWKQCBABA====/298296-tihe-misce-den-pershiy.jpg"  width="154" height="229">
 <img src="https://static.sweet.tv/images/cache6/posters/BC26KAISAJ2WWKQCBABA====/284167-garfild-u-kino.jpg" width="154" height="229">
 </div>
+
+
 </body>
 </html>
 
