--- a/index.html
+++ b/index.html
@@ -8,82 +8,231 @@
 <link rel="stylesheet" href="styles/style.css">
  </head>
  <body>
-
-
-<header class="header-seo">
-	<div class="logo">
-		<a href="file:///C:/Users/%D0%94%D0%BE%D0%BC%D0%BE%D0%B2%D0%BE%D0%B9/Desktop/web-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/index.html">
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Sweet.tv_logo.svg/2560px-Sweet.tv_logo.svg.png" alt="sweet.tv" width="140" height="26"></a>
-	</div>
-	<div class="routes">
-		ТБ Безкоштовне ТБ Фільми Мультики Серіали Приставка Тарифи Спробувати безкоштовно                   
-	</div>
-	<div class="free">
-		Спробувати безкоштовно                   
-	</div>
-</header>
- .
-<h1><p> Світові новинки кіно та телебачення на SWEET.TV</p></h1>
-   	<h2> Підключити безкоштовні 7 днів </h2>
-
- 	 <img src="https://sweet-tv-static.sweet.tv/web/v2/home/block_2-UA-en-1729173052.png"alt="" width="550" height="400">
-<div class="black">
-<div class="Easy connection">
-	<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/flash.svg" alt="tablet" width="48" height="48">
-	<class="Easy connection>"Просте підключення
-	</div>
-<div class="Clear interface">
-	<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/interface.svg" alt="інтерфейс" width="40" height="40">
-	<class="Clear interface>"Зрозумілий інтерфейс
-	</div>
-<div class="Constant update">
-	<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/collection.svg" alt="оновлення" width="40" height="40">
-	<class="Constant update">Постійне оновлення 
-	</div>
-<div class="">
-	<p><b>Дивись на будь-якому пристрої</b></p>
-	<p>Підключай одночасно на 5 пристроях. Додаток можна встановити на телевізор, смартфон, ноутбук, планшет чи на Xbox</p>
-        </div></div>
-	<div class="chat">
-	<div class="chat-icon">
-		<img src="https://www.pngmart.com/files/23/Chat-Icon-PNG-HD.png" alt="sweet.tv" width="45" height="45">
-	</div>                
-	</div>
-	<h3>Що входить у тариф SWEET.TV?</h2>
-
-
-<div data-aos="fade-up"> 
-		<h3>414 каналів</h3>
-	<div class="m2__what-text">
-		<div class="m2__what-item">
-			<b>Національне та преміальне ТБ</b>
-			<p>Дивись національні, фільмові, преміальні, дитячі, спортивні та інші телеканали</p>
+<div class="main-page-ua__header" style="background-image: url(&quot;https://sweet-tv-static.sweet.tv/web/v2/home/UA-header_img-1729162981.png&quot;);">
+	<div class="header-seo">
+		<div class="logo">
+			<a href="file:///C:/Users/%D0%94%D0%BE%D0%BC%D0%BE%D0%B2%D0%BE%D0%B9/Desktop/web-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/index.html">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Sweet.tv_logo.svg/2560px-Sweet.tv_logo.svg.png" alt="sweet.tv" width="140" height="26"></a>
 		</div>
-		<div class="m2__what-item">
-			<b>Керуй прямим ефіром</b>
-			<p>Перемотуй, став на паузу та продовжуй перегляд пізніше</p>
+		<div class="routes">
+			ТБ Безкоштовне ТБ Фільми Мультики Серіали Приставка Тарифи 
+			<div class="uk" > 
+				uk   
+			</div> 
+		<div class="search">   
+		<img src="https://sweet.tv/images/icons/search.svg"  width="24" height="24" >
 		</div>
-		<div class="m2__what-item">
-			<b>Передачі в записі до 7 днів</b>
-			<p>Більше не треба поспішати, щоб встигнути на початок програми</p>
+		<div class="Log_in">
+			Увійти 
 		</div>
+			
+		<div class="free">
+			Спробувати безкоштовно                   
+		</div>
+	</div>
+	</div>
+	-
+	<div class="content">
+		<h1>Світові новинки кіно<br>та телебачення на<br><strong>SWEET.TV</strong></h1>
+		<button class="btn">Підключити безкоштовні 7 днів</button>
+	  </div>
+	  <div class="tv-screen">
+		<img src="https://sweet-tv-static.sweet.tv/web/v2/home/block_2-UA-en-1729173052.png"alt="" width="550" height="400">
+	  </div>
+	  
+	<div class="interface">
+		<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/flash.svg" alt="tablet" width="48" height="48">
+		Просте підключення
+		<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/interface.svg" alt="інтерфейс" width="40" height="40">
+		Зрозумілий інтерфейс
+		<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/collection.svg" alt="оновлення" width="40" height="40">
+		Постійне оновлення
+
+	<div class="device">
+		<p><b>Дивись на будь-якому пристрої</b></p>
+		<div class="main-page-ua__header-devices-content">
+			<div class="main-page-ua__header-devices-device">
+				<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/tv.svg" alt="tv" width="48" height="48" class="main-page-ua__header-devices-device-icon">
+				<p class="main-page-ua__header-devices-device-text"> телевізор</p>
+			</div>
+
+			<div class="main-page-ua__header-devices-device">
+				<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/laptop.svg" alt="laptop" width="48" height="48" class="main-page-ua__header-devices-device-icon">
+				<p class="main-page-ua__header-devices-device-text"> комп'ютер</p>
+			</div>
+
+			<div class="main-page-ua__header-devices-device">
+				<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/mobile.svg" alt="mobile" width="48" height="48" class="main-page-ua__header-devices-device-icon">
+				<p class="main-page-ua__header-devices-device-text"> телефон</p>
+			</div>
+
+			<div class="main-page-ua__header-devices-device">
+				<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/tablet.svg" alt="tablet" width="48" height="48" class="main-page-ua__header-devices-device-icon">
+				<p class="main-page-ua__header-devices-device-text"> планшет</p>
+			</div>
+		</div>
+		<p>Підключай одночасно на 5 пристроях. Додаток можна встановити на телевізор, смартфон, ноутбук, планшет чи на Xbox</p>
+			</div></div>
+	<div class="SWEET_TV">
+		<div class="chat">
+		<div class="chat-icon">
+			<img src="https://www.pngmart.com/files/23/Chat-Icon-PNG-HD.png" alt="sweet.tv" width="45" height="45">              
+		</div></div>
+		<h1>Що входить у тариф SWEET.TV?</h1>
+	<div data-aos="fade-up"> 
+			<h1>414 каналів</h1>
+		<div class="m2__what-text">
+			<div class="m2__what-item">
+				<h4>Національне та преміальне ТБ</h4>
+				<p>Дивись національні, фільмові, преміальні, дитячі, спортивні та інші телеканали</p>
+			</div>
+			<div class="m2__what-item">
+				<h4>Керуй прямим ефіром</h4>
+				<p>Перемотуй, став на паузу та продовжуй перегляд пізніше</p>
+			</div>
+			<div class="m2__what-item">
+				<h4>Передачі в записі до 7 днів</h4>
+				<p>Більше не треба поспішати, щоб встигнути на початок програми</p>
+			</div>
+		</div>
+	</div>
+	<div class="what-img">
+			<img src="https://sweet.tv/images/v2/index_2022/channels_uk.png" width="581" height="400">
+	</div>
+	<h3><p>Щомісяця світові прем'єри <p>від голлівудських студій на SWEET.TV</p></p></h3>             
+		
+	<div class="Photo" >
+					<img src="https://static.sweet.tv/images/cache6/posters/BDOO6AISAJ2WWKQCBABA====/298443-dedpul-i-rosomaha.jpg" width="154" height="229">
+		<img src="https://static.sweet.tv/images/cache6/posters/BCZO4AISAJ2WWKQCBABA====/298305-zaberi-mene-na-misyac.jpg" width="154" height="229">
+		<img src="https://static.sweet.tv/images/cache6/posters/BC7OOAISAJ2WWKQCBABA====/284158-korolivstvo-planeti-mavp.jpg"  width="154" height="229">
+		<img src="https://static.sweet.tv/images/cache6/posters/BC7LCAISAJ2WWKQCBABA====/22718-raya-ta-ostanniy-drakon.jpg"  width="154" height="229">
+		<img src="https://static.sweet.tv/images/cache6/posters/BCYOYAISAJ2WWKQCBABA====/298248-ebigeyl.jpg" width="154" height="229">
+		<img src="https://static.sweet.tv/images/cache6/posters/BCO6GAISAJ2WWKQCBABA====/298353-smerchi.jpg"  width="154" height="229">
+		<img src="https://static.sweet.tv/images/cache6/posters/BCIOKAISAJ2WWKQCBABA====/298296-tihe-misce-den-pershiy.jpg"  width="154" height="229">
+		<img src="https://static.sweet.tv/images/cache6/posters/BC26KAISAJ2WWKQCBABA====/284167-garfild-u-kino.jpg" width="154" height="229">
+	</div>
+
+	<div class="what-item">
+		<p>Новинки кіно одразу після кінотеатру</p>
+		<p>від Disney, Paramount, Sony, Universal, Warner Bros</p>
+		Найкращі фільми світу
+		<p>з рейтингом 7–10 за IMDb</p>
+		<p>Прем'єри українського кіно</p>
+		<p>Ексклюзивний україномовний дубляж</p>
+		<p>Всі фільми без реклами</p>
+	</div>
+	<div class="m2__studios">
+				<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg"width="95" height="56">
+				<img src="https://sweet.tv/images/v2/index_2022/disney.svg"width="115" height="41">
+				<img src="https://sweet.tv/images/v2/index_2022/sony.svg"width="40" height="61" >
+				<img src="https://sweet.tv/images/v2/index_2022/warner.svg"width="52" height="53">
+	</div>   
+	<div data-aos="fade-up" >
+			<h1>Мультфільми</h1>
+			<h3><p>Шедеври мультиплікації від Disney, Pixar, DreamWorks та ін. для дітей будь-якого віку та для всієї родини. Дивись українською та без реклами: “Свинка Пеппа”, “Нікчемний Я”, “Рататуй”, “Шрек” та ін.</p></h3>
+			<img src="https://sweet.tv/images/v2/index_2022/mult_bird.png">
+			<div class="m2__what-tablet">
+					<video disablepictureinpicture="">
+					<source src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4"width="582" height="395">
+				</video>
+				</div>
+				<div class="m2__studios">
+					<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg"width="95" height="56">
+					<img src="https://sweet.tv/images/v2/index_2022/disney.svg"width="115" height="41">
+					<img src="https://sweet.tv/images/v2/index_2022/sony.svg"width="40" height="61" >
+					<img src="https://sweet.tv/images/v2/index_2022/warner.svg"width="52" height="53">
+				</div>
+	</div>			
+	<div class="sports">
+			<img src="https://sweet.tv/images/v2/index_2022/sport.png"width="677" height="413">
+			<p>Спорт</p>
+			<p>Європейський футбол</p>
+			<p>Трансляції футбольних чемпіонатів Англії, Німеччини та Бельгії.</p>
+			<p>Спортивні події</p>
+			<p>Яскраві спортивні події зі світу UFC, NHL, NBA, MLB, Formula 1 і Formula E, турніри з тенісу, снукеру, гольфу та ін.</p>
+			</div>
+			
+			<div class="ROZETKA" >
+			<h1>Огляд SWEET.TV від ROZETKA</h1>
+			<p>Незалежні експерти з ROZETKA оцінили SWEET.TV та розповіли про сервіс на своєму каналі у YouTube</p>
+			<div class="ROZETKA_video">
+				<iframe  src="https://www.youtube.com/embed/ag21zj6G1no"width="490" height="250" >
+				</iframe>
+			</div>
+			</div>	
+	</div>
+
+	<div class="m2__subsrc_lozad">
+            <h1> Даруємо 7 днів
+			<br>передплати</br></h1>
+			<h3>Дивись ТБ і кіно 7 днів без обмежень</h3>
+		<div class="free_7">	
+				<p>Отримати в подарунок передплату на 7 днів</p>            
+		</div>
+    </div>
+
+	<div class="m2__sveet">
+		<div class="m2__people m2__left-people">
+			<img src="https://sweet.tv/images/v2/index_2022/people_left.png" width="288" height="258">
+		</div>
+	<div class="m2_logo">
+		<img src="https://sweet.tv/images/v2/index_2022/logo_full.svg"width="245" height="71">
+	</div>
+	<div class="m2__count">
+		<span>2</span>
+		<span>5</span>
+		<span>6</span>
+		<span>0</span>
+		<span>6</span>
+		<span>2</span>
+		<span>3</span>
+		<p>Людей вже спробувало SWEET.TV</p>
+</div>
+<div class="m2__people m2__right-people">
+	<img src="https://sweet.tv/images/v2/index_2022/people_right.png" width="288" height="258" data-aos="my-scale" data-aos-duration="1000" data-aos-delay="100" class="img_wauto_hauto lozad aos-init aos-animate" data-placeholder-background="#15384c" onload="this.style.background = 'unset'" data-src="https://sweet.tv/images/v2/index_2022/people_right.png" alt="people" style="background: unset;" data-loaded="true">
+</div>
+
+<div class="m2__sound-img">
+	<img class="img_wauto_hauto lozad" width="950" height="578" src="https://sweet.tv/images/v2/index_2022/microphone.png" data-src="https://sweet.tv/images/v2/index_2022/microphone.png" >
+</div>
+<div class="h3_title">Насолоджуйся<br> ексклюзивним<br> українським дубляжем
+</div>
+<p>SWEET.TV власними коштами створює авторський дубляж і озвучку для культових голлівудських кінохітів</p>
+</div>
+<img src="https://sweet.tv/images/v2/index_2022/bg2-family.webp"width="1450" height="800" >
+
+<div class="m2__family-block">
+	<div class="h2_title">
+		<p>Заощаджуй!<br>Одна передплата для <br>всієї родини </h1>           </div>
+	<h4>Підключай батьків та близьких до однієї передплати. Активуй SWEET.TV<br> одночасно на 5 пристроях. Програма доступна на телевізорах,<br> смартфонах, ноутбуках, планшетах і навіть на Xbox</p>
+	<div class="m2__family-apps">
+			<img src="https://sweet.tv/images/v2/index_2022/google_dark.svg">
+			<img src="https://sweet.tv/images/v2/index_2022/apple_dark.svg">
+			<img src="https://sweet.tv/images/v2/index_2022/smart_dark.svg">
+			<img src="https://sweet.tv/images/v2/index_2022/huawei_dark.svg">
 	</div>
 </div>
-<div class="Photo" >
-                <h3><p>Щомісяця світові прем'єри від голлівудських студій на SWEET.TV</p></h3>             
-<img src="https://static.sweet.tv/images/cache6/posters/BDOO6AISAJ2WWKQCBABA====/298443-dedpul-i-rosomaha.jpg" width="154" height="229">
-<img src="https://static.sweet.tv/images/cache6/posters/BCZO4AISAJ2WWKQCBABA====/298305-zaberi-mene-na-misyac.jpg" width="154" height="229">
-<img src="https://static.sweet.tv/images/cache6/posters/BC7OOAISAJ2WWKQCBABA====/284158-korolivstvo-planeti-mavp.jpg"  width="154" height="229">
-<img src="https://static.sweet.tv/images/cache6/posters/BDJ64AISAJ2WWKQCBABA====/281514-mahhhin.jpg"  width="154" height="229">
-<img src="https://static.sweet.tv/images/cache6/posters/BC7LCAISAJ2WWKQCBABA====/22718-raya-ta-ostanniy-drakon.jpg"  width="154" height="229">
-<img src="https://static.sweet.tv/images/cache6/posters/BCZOYAISAJ2WWKQCBABA====/298326-kaskader.jpg"  width="154" height="229">
-<img src="https://static.sweet.tv/images/cache6/posters/BCYOYAISAJ2WWKQCBABA====/298248-ebigeyl.jpg" width="154" height="229">
-<img src="https://static.sweet.tv/images/cache6/posters/BCO6GAISAJ2WWKQCBABA====/298353-smerchi.jpg"  width="154" height="229">
-<img src="https://static.sweet.tv/images/cache6/posters/BCIOKAISAJ2WWKQCBABA====/298296-tihe-misce-den-pershiy.jpg"  width="154" height="229">
-<img src="https://static.sweet.tv/images/cache6/posters/BC26KAISAJ2WWKQCBABA====/284167-garfild-u-kino.jpg" width="154" height="229">
+
+<div class="tariffis">
+<div class="h3_title tariffs-europe__subscriptions-row-header-column-text">
+	Передплати                            
 </div>
+<p>S</p>
+<p>від 49 грн/міс</p>
+</p>Підключити</p>
+
+<p>M</p>
+<p>від 96 грн/міс</p>
+</p>Спробувати за 1 грн</p>
+<p>Перші 14 днів — за 1 UAH</p>
+
+<p>L</p>
+<p>від 149 грн/міс</p>
+<p>Перші 14 днів — за 1 UAH</p>
+</p>Спробувати за 1 грн</p>
 
 
+</div>
 </body>
 </html>
 
