--- a/index.html
+++ b/index.html
@@ -34,22 +34,25 @@
 	-
 	<div class="content">
 		<h1>Світові новинки кіно<br>та телебачення на<br><strong>SWEET.TV</strong></h1>
-		<button class="btn">Підключити безкоштовні 7 днів</button>
+		<button>Підключити безкоштовні 7 днів</button>
 	  </div>
 	  <div class="tv-screen">
 		<img src="https://sweet-tv-static.sweet.tv/web/v2/home/block_2-UA-en-1729173052.png"alt="" width="550" height="400">
 	  </div>
 	  
 	<div class="interface">
-		<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/flash.svg" alt="tablet" width="48" height="48">
+		<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/flash.svg" alt="tablet" class="main-page">
 		Просте підключення
-		<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/interface.svg" alt="інтерфейс" width="40" height="40">
+		<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/interface.svg" alt="інтерфейс" class="main-page">
 		Зрозумілий інтерфейс
-		<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/collection.svg" alt="оновлення" width="40" height="40">
+		<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/collection.svg" alt="оновлення" class="main-page">
 		Постійне оновлення
-
+	</div>
 	<div class="device">
-		<p><b>Дивись на будь-якому пристрої</b></p>
+		<p class="main-page-ua__header-devices-texts-title">Дивись на будь-якому пристрої</p>
+		<p class="main-page-ua__header-devices-texts-description">
+			Підключай одночасно на 5 пристроях. Додаток можна встановити на телевізор, смартфон, ноутбук, планшет чи на Xbox
+		</p>
 		<div class="main-page-ua__header-devices-content">
 			<div class="main-page-ua__header-devices-device">
 				<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/tv.svg" alt="tv" width="48" height="48" class="main-page-ua__header-devices-device-icon">
@@ -70,8 +73,9 @@
 				<img src="https://sweet-tv-static.sweet.tv/web/v2/main_page/icons/tablet.svg" alt="tablet" width="48" height="48" class="main-page-ua__header-devices-device-icon">
 				<p class="main-page-ua__header-devices-device-text"> планшет</p>
 			</div>
-		</div>
-		<p>Підключай одночасно на 5 пристроях. Додаток можна встановити на телевізор, смартфон, ноутбук, планшет чи на Xbox</p>
+		
+
+
 			</div></div>
 	<div class="SWEET_TV">
 		<div class="chat">
@@ -83,24 +87,28 @@
 			<h1>414 каналів</h1>
 		<div class="m2__what-text">
 			<div class="m2__what-item">
-				<h4>Національне та преміальне ТБ</h4>
-				<p>Дивись національні, фільмові, преміальні, дитячі, спортивні та інші телеканали</p>
-			</div>
-			<div class="m2__what-item">
-				<h4>Керуй прямим ефіром</h4>
-				<p>Перемотуй, став на паузу та продовжуй перегляд пізніше</p>
-			</div>
-			<div class="m2__what-item">
-				<h4>Передачі в записі до 7 днів</h4>
-				<p>Більше не треба поспішати, щоб встигнути на початок програми</p>
+				<h3>Національне та преміальне ТБ</h3>
+				<p class="gray">Дивись національні, фільмові, преміальні, дитячі, спортивні та інші телеканали</p>
+				<h3>Керуй прямим ефіром</h3>
+				<p class="gray">Перемотуй, став на паузу та продовжуй перегляд пізніше</p>
+				<h3>Передачі в записі до 7 днів</h3>
+				<p class="gray">Більше не треба поспішати, щоб встигнути на початок програми</p>
 			</div>
 		</div>
 	</div>
 	<div class="what-img">
-			<img src="https://sweet.tv/images/v2/index_2022/channels_uk.png" width="581" height="400">
+			<img src="https://sweet.tv/images/v2/index_2022/channels_uk.png" width="450" height="300">
 	</div>
-	<h3><p>Щомісяця світові прем'єри <p>від голлівудських студій на SWEET.TV</p></p></h3>             
-		
+	<h1><p>Щомісяця світові прем'єри <p>від голлівудських студій на SWEET.TV</p></p></h1>             
+	<div class="what-item">
+		<h3>Новинки кіно одразу після кінотеатру</h3>
+		<p class="gray">від Disney, Paramount, Sony, Universal, Warner Bros</p>
+		<h3>Найкращі фільми світу</h3>
+		<p class="gray">з рейтингом 7–10 за IMDb</p>
+		<h3>Прем'єри українського кіно</h3>
+		<h3>Ексклюзивний україномовний дубляж</h3>
+		<h3>Всі фільми без реклами</h3>
+	</div>	
 	<div class="Photo" >
 					<img src="https://static.sweet.tv/images/cache6/posters/BDOO6AISAJ2WWKQCBABA====/298443-dedpul-i-rosomaha.jpg" width="154" height="229">
 		<img src="https://static.sweet.tv/images/cache6/posters/BCZO4AISAJ2WWKQCBABA====/298305-zaberi-mene-na-misyac.jpg" width="154" height="229">
@@ -112,15 +120,7 @@
 		<img src="https://static.sweet.tv/images/cache6/posters/BC26KAISAJ2WWKQCBABA====/284167-garfild-u-kino.jpg" width="154" height="229">
 	</div>
 
-	<div class="what-item">
-		<p>Новинки кіно одразу після кінотеатру</p>
-		<p>від Disney, Paramount, Sony, Universal, Warner Bros</p>
-		Найкращі фільми світу
-		<p>з рейтингом 7–10 за IMDb</p>
-		<p>Прем'єри українського кіно</p>
-		<p>Ексклюзивний україномовний дубляж</p>
-		<p>Всі фільми без реклами</p>
-	</div>
+	
 	<div class="m2__studios">
 				<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg"width="95" height="56">
 				<img src="https://sweet.tv/images/v2/index_2022/disney.svg"width="115" height="41">
@@ -129,28 +129,30 @@
 	</div>   
 	<div data-aos="fade-up" >
 			<h1>Мультфільми</h1>
-			<h3><p>Шедеври мультиплікації від Disney, Pixar, DreamWorks та ін. для дітей будь-якого віку та для всієї родини. Дивись українською та без реклами: “Свинка Пеппа”, “Нікчемний Я”, “Рататуй”, “Шрек” та ін.</p></h3>
-			<img src="https://sweet.tv/images/v2/index_2022/mult_bird.png">
+			<div class="m3__what-item">
+			<p class="gray">Шедеври мультиплікації від Disney, Pixar, DreamWorks та ін. для дітей будь-якого віку та для всієї<br> родини. Дивись українською та без реклами: “Свинка Пеппа”, “Нікчемний Я”, “Рататуй”, “Шрек” та ін.</p>
+			</div>
 			<div class="m2__what-tablet">
-					<video disablepictureinpicture="">
-					<source src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4"width="582" height="395">
-				</video>
-				</div>
-				<div class="m2__studios">
-					<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg"width="95" height="56">
-					<img src="https://sweet.tv/images/v2/index_2022/disney.svg"width="115" height="41">
-					<img src="https://sweet.tv/images/v2/index_2022/sony.svg"width="40" height="61" >
-					<img src="https://sweet.tv/images/v2/index_2022/warner.svg"width="52" height="53">
-				</div>
+                <video disablepictureinpicture="" class="lozad" data-background-image="https://sweet.tv/images/v2/index_2022/mult_tablet.png" width="100" height="100"  style="background-image: url(&quot;https://sweet.tv/images/v2/index_2022/mult_tablet.png&quot;);">
+                    <source data-src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4" type="video/mp4" src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4">
+                </video>
+                <img scr="https://sweet.tv/images/v2/index_2022/mult_bird.png"  src="https://sweet.tv/images/v2/index_2022/mult_bird.png"  class="parrot" >
+            </div>
+	<div class="m2__studios">
+		<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg"width="95" height="56">
+		<img src="https://sweet.tv/images/v2/index_2022/disney.svg"width="115" height="41">
+		<img src="https://sweet.tv/images/v2/index_2022/sony.svg"width="40" height="61" >
+		<img src="https://sweet.tv/images/v2/index_2022/warner.svg"width="52" height="53">
+	</div>
 	</div>			
 	<div class="sports">
-			<img src="https://sweet.tv/images/v2/index_2022/sport.png"width="677" height="413">
-			<p>Спорт</p>
-			<p>Європейський футбол</p>
-			<p>Трансляції футбольних чемпіонатів Англії, Німеччини та Бельгії.</p>
-			<p>Спортивні події</p>
-			<p>Яскраві спортивні події зі світу UFC, NHL, NBA, MLB, Formula 1 і Formula E, турніри з тенісу, снукеру, гольфу та ін.</p>
+			<h3>Спорт</h3>
+			<h3>Європейський футбол</h3>
+			<p class="gray">Трансляції футбольних чемпіонатів Англії, Німеччини та Бельгії.</p>
+			<h3>Спортивні події</h3>
+			<p class="gray">Яскраві спортивні події зі світу UFC, NHL, NBA, MLB, Formula 1<br> і Formula E, турніри з тенісу, снукеру, гольфу та ін.</p>
 			</div>
+			<img src="https://sweet.tv/images/v2/index_2022/sport.png"width="500" height="350" class="img_sport">
 			
 			<div class="ROZETKA" >
 			<h1>Огляд SWEET.TV від ROZETKA</h1>
