--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
  <meta charset="UTF-8">
  <title>Телебачення і онлайн кинотеатр тільки у SWEET.TV!</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</style>
 <link rel="stylesheet" href="styles/style.css">
  </head>
  <body>
-<div class="main-page-ua__header" style="background-image: url(&quot;https://sweet-tv-static.sweet.tv/web/v2/home/UA-header_img-1729162981.png&quot;);">
+<div class="main-page-ua__header" style="background-image: url(&quot;https://sweet-tv-static.sweet.tv/web/v2/home/UA-header_img-1729162981.png&quot;);"></div>
 	<div class="header-seo">
 		<div class="logo">
 			<a href="file:///C:/Users/%D0%94%D0%BE%D0%BC%D0%BE%D0%B2%D0%BE%D0%B9/Desktop/web-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/index.html">
@@ -20,7 +19,7 @@
 				uk   
 			</div> 
 		<div class="search">   
-		<img src="https://sweet.tv/images/icons/search.svg"  width="24" height="24" >
+		<img src="https://sweet.tv/images/icons/search.svg" alt="" width="24" height="24" >
 		</div>
 		<div class="Log_in">
 			Увійти 
@@ -37,7 +36,7 @@
 		<button>Підключити безкоштовні 7 днів</button>
 	  </div>
 	  <div class="tv-screen">
-		<img src="https://sweet-tv-static.sweet.tv/web/v2/home/block_2-UA-en-1729173052.png"alt="" width="550" height="400">
+		<img src="https://sweet-tv-static.sweet.tv/web/v2/home/block_2-UA-en-1729173052.png" alt="" width="550" height="400">
 	  </div>
 	  
 	<div class="interface">
@@ -82,9 +81,8 @@
 		<div class="chat-icon">
 			<img src="https://www.pngmart.com/files/23/Chat-Icon-PNG-HD.png" alt="sweet.tv" width="45" height="45">              
 		</div></div>
-		<h1>Що входить у тариф SWEET.TV?</h1>
 	<div data-aos="fade-up"> 
-			<h1>414 каналів</h1>
+			<h1>Що входить у тариф SWEET.TV? <br> 414 каналів</h1>
 		<div class="m2__what-text">
 			<div class="m2__what-item">
 				<h3>Національне та преміальне ТБ</h3>
@@ -97,9 +95,9 @@
 		</div>
 	</div>
 	<div class="what-img">
-			<img src="https://sweet.tv/images/v2/index_2022/channels_uk.png" width="450" height="300">
+			<img src="https://sweet.tv/images/v2/index_2022/channels_uk.png" alt="" width="450" height="300">
 	</div>
-	<h1><p>Щомісяця світові прем'єри <p>від голлівудських студій на SWEET.TV</p></p></h1>             
+	<h1><br>Щомісяця світові прем'єри <br> від голлівудських студій на SWEET.TV</h1>             
 	<div class="what-item">
 		<h3>Новинки кіно одразу після кінотеатру</h3>
 		<p class="gray">від Disney, Paramount, Sony, Universal, Warner Bros</p>
@@ -109,23 +107,24 @@
 		<h3>Ексклюзивний україномовний дубляж</h3>
 		<h3>Всі фільми без реклами</h3>
 	</div>	
+
 	<div class="Photo" >
-					<img src="https://static.sweet.tv/images/cache6/posters/BDOO6AISAJ2WWKQCBABA====/298443-dedpul-i-rosomaha.jpg" width="154" height="229">
-		<img src="https://static.sweet.tv/images/cache6/posters/BCZO4AISAJ2WWKQCBABA====/298305-zaberi-mene-na-misyac.jpg" width="154" height="229">
-		<img src="https://static.sweet.tv/images/cache6/posters/BC7OOAISAJ2WWKQCBABA====/284158-korolivstvo-planeti-mavp.jpg"  width="154" height="229">
-		<img src="https://static.sweet.tv/images/cache6/posters/BC7LCAISAJ2WWKQCBABA====/22718-raya-ta-ostanniy-drakon.jpg"  width="154" height="229">
-		<img src="https://static.sweet.tv/images/cache6/posters/BCYOYAISAJ2WWKQCBABA====/298248-ebigeyl.jpg" width="154" height="229">
-		<img src="https://static.sweet.tv/images/cache6/posters/BCO6GAISAJ2WWKQCBABA====/298353-smerchi.jpg"  width="154" height="229">
-		<img src="https://static.sweet.tv/images/cache6/posters/BCIOKAISAJ2WWKQCBABA====/298296-tihe-misce-den-pershiy.jpg"  width="154" height="229">
-		<img src="https://static.sweet.tv/images/cache6/posters/BC26KAISAJ2WWKQCBABA====/284167-garfild-u-kino.jpg" width="154" height="229">
+					<img src="https://static.sweet.tv/images/cache6/posters/BDOO6AISAJ2WWKQCBABA====/298443-dedpul-i-rosomaha.jpg" width="154" height="229" alt="" >
+		<img src="https://static.sweet.tv/images/cache6/posters/BCZO4AISAJ2WWKQCBABA====/298305-zaberi-mene-na-misyac.jpg" width="154" height="229" alt="">
+		<img src="https://static.sweet.tv/images/cache6/posters/BC7OOAISAJ2WWKQCBABA====/284158-korolivstvo-planeti-mavp.jpg"  width="154" height="229" alt="">
+		<img src="https://static.sweet.tv/images/cache6/posters/BC7LCAISAJ2WWKQCBABA====/22718-raya-ta-ostanniy-drakon.jpg"  width="154" height="229" alt="">
+		<img src="https://static.sweet.tv/images/cache6/posters/BCYOYAISAJ2WWKQCBABA====/298248-ebigeyl.jpg" width="154" height="229" alt="">
+		<img src="https://static.sweet.tv/images/cache6/posters/BCO6GAISAJ2WWKQCBABA====/298353-smerchi.jpg"  width="154" height="229" alt="">
+		<img src="https://static.sweet.tv/images/cache6/posters/BCIOKAISAJ2WWKQCBABA====/298296-tihe-misce-den-pershiy.jpg"  width="154" height="229" alt="">
+		<img src="https://static.sweet.tv/images/cache6/posters/BC26KAISAJ2WWKQCBABA====/284167-garfild-u-kino.jpg" width="154" height="229" alt="">
 	</div>
 
 	
 	<div class="m2__studios">
-				<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg"width="95" height="56">
-				<img src="https://sweet.tv/images/v2/index_2022/disney.svg"width="115" height="41">
-				<img src="https://sweet.tv/images/v2/index_2022/sony.svg"width="40" height="61" >
-				<img src="https://sweet.tv/images/v2/index_2022/warner.svg"width="52" height="53">
+				<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg" width="95" height="56" alt="">
+				<img src="https://sweet.tv/images/v2/index_2022/disney.svg" width="115" height="41" alt="">
+				<img src="https://sweet.tv/images/v2/index_2022/sony.svg" width="40" height="61" alt="">
+				<img src="https://sweet.tv/images/v2/index_2022/warner.svg" width="52" height="53" alt="">
 	</div>   
 	<div data-aos="fade-up" >
 			<h1>Мультфільми</h1>
@@ -133,16 +132,16 @@
 			<p class="gray">Шедеври мультиплікації від Disney, Pixar, DreamWorks та ін. для дітей будь-якого віку та для всієї<br> родини. Дивись українською та без реклами: “Свинка Пеппа”, “Нікчемний Я”, “Рататуй”, “Шрек” та ін.</p>
 			</div>
 			<div class="m2__what-tablet">
-                <video disablepictureinpicture="" class="lozad" data-background-image="https://sweet.tv/images/v2/index_2022/mult_tablet.png" width="100" height="100"  style="background-image: url(&quot;https://sweet.tv/images/v2/index_2022/mult_tablet.png&quot;);">
+                <video class="lozad" data-background-image="https://sweet.tv/images/v2/index_2022/mult_tablet.png" width="100" height="100"  style="background-image: url(&quot;https://sweet.tv/images/v2/index_2022/mult_tablet.png&quot;);">
                     <source data-src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4" type="video/mp4" src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4">
                 </video>
-                <img scr="https://sweet.tv/images/v2/index_2022/mult_bird.png"  src="https://sweet.tv/images/v2/index_2022/mult_bird.png"  class="parrot" >
+                <img src="https://sweet.tv/images/v2/index_2022/mult_bird.png" alt="" class="parrot" >
             </div>
 	<div class="m2__studios">
-		<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg"width="95" height="56">
-		<img src="https://sweet.tv/images/v2/index_2022/disney.svg"width="115" height="41">
-		<img src="https://sweet.tv/images/v2/index_2022/sony.svg"width="40" height="61" >
-		<img src="https://sweet.tv/images/v2/index_2022/warner.svg"width="52" height="53">
+		<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg" width="95" height="56" alt="">
+		<img src="https://sweet.tv/images/v2/index_2022/disney.svg" width="115" height="41" alt="">
+		<img src="https://sweet.tv/images/v2/index_2022/sony.svg" width="40" height="61" alt="">
+		<img src="https://sweet.tv/images/v2/index_2022/warner.svg" width="52" height="53" alt="">
 	</div>
 	</div>			
 	<div class="sports">
@@ -152,13 +151,13 @@
 			<h3>Спортивні події</h3>
 			<p class="gray">Яскраві спортивні події зі світу UFC, NHL, NBA, MLB, Formula 1<br> і Formula E, турніри з тенісу, снукеру, гольфу та ін.</p>
 			</div>
-			<img src="https://sweet.tv/images/v2/index_2022/sport.png"width="500" height="350" class="img_sport">
+			<img src="https://sweet.tv/images/v2/index_2022/sport.png" alt="" width="500" height="350" class="img_sport">
 			
 			<div class="ROZETKA" >
 			<h1>Огляд SWEET.TV від ROZETKA</h1>
 			<p>Незалежні експерти з ROZETKA оцінили SWEET.TV та розповіли про сервіс на своєму каналі у YouTube</p>
 			<div class="ROZETKA_video">
-				<iframe  src="https://www.youtube.com/embed/ag21zj6G1no"width="490" height="250" >
+				<iframe  src="https://www.youtube.com/embed/ag21zj6G1no" width="490" height="250" >
 				</iframe>
 			</div>
 			</div>	
@@ -166,7 +165,7 @@
 
 	<div class="m2__subsrc_lozad">
             <h1> Даруємо 7 днів
-			<br>передплати</br></h1>
+			<br>передплати</h1>
 			<h3>Дивись ТБ і кіно 7 днів без обмежень</h3>
 		<div class="free_7">	
 				<p>Отримати в подарунок передплату на 7 днів</p>            
@@ -175,10 +174,10 @@
 
 	<div class="m2__sveet">
 		<div class="m2__people m2__left-people">
-			<img src="https://sweet.tv/images/v2/index_2022/people_left.png" width="288" height="258">
+			<img src="https://sweet.tv/images/v2/index_2022/people_left.png" alt="" width="288" height="258">
 		</div>
 	<div class="m2_logo">
-		<img src="https://sweet.tv/images/v2/index_2022/logo_full.svg"width="245" height="71">
+		<img src="https://sweet.tv/images/v2/index_2022/logo_full.svg" alt="" width="245" height="71">
 	</div>
 	<div class="m2__count">
 		<span>2</span>
@@ -191,47 +190,46 @@
 		<p>Людей вже спробувало SWEET.TV</p>
 </div>
 <div class="m2__people m2__right-people">
-	<img src="https://sweet.tv/images/v2/index_2022/people_right.png" width="288" height="258" data-aos="my-scale" data-aos-duration="1000" data-aos-delay="100" class="img_wauto_hauto lozad aos-init aos-animate" data-placeholder-background="#15384c" onload="this.style.background = 'unset'" data-src="https://sweet.tv/images/v2/index_2022/people_right.png" alt="people" style="background: unset;" data-loaded="true">
+	<img src="https://sweet.tv/images/v2/index_2022/people_right.png" width="288" height="258" alt="people">
 </div>
 
 <div class="m2__sound-img">
-	<img class="img_wauto_hauto lozad" width="950" height="578" src="https://sweet.tv/images/v2/index_2022/microphone.png" data-src="https://sweet.tv/images/v2/index_2022/microphone.png" >
+	<img class="img_wauto_hauto lozad" width="950" height="578" src="https://sweet.tv/images/v2/index_2022/microphone.png" data-src="https://sweet.tv/images/v2/index_2022/microphone.png" alt="">
 </div>
 <div class="h3_title">Насолоджуйся<br> ексклюзивним<br> українським дубляжем
 </div>
 <p>SWEET.TV власними коштами створює авторський дубляж і озвучку для культових голлівудських кінохітів</p>
 </div>
-<img src="https://sweet.tv/images/v2/index_2022/bg2-family.webp"width="1450" height="800" >
+<img src="https://sweet.tv/images/v2/index_2022/bg2-family.webp" width="1450" height="800" alt="">
 
 <div class="m2__family-block">
 	<div class="h2_title">
-		<p>Заощаджуй!<br>Одна передплата для <br>всієї родини </h1>           </div>
-	<h4>Підключай батьків та близьких до однієї передплати. Активуй SWEET.TV<br> одночасно на 5 пристроях. Програма доступна на телевізорах,<br> смартфонах, ноутбуках, планшетах і навіть на Xbox</p>
+		<br>Заощаджуй!<br>Одна передплата для <br>всієї родини         </div>
+	Підключай батьків та близьких до однієї передплати. Активуй SWEET.TV<br> одночасно на 5 пристроях. Програма доступна на телевізорах,<br> смартфонах, ноутбуках, планшетах і навіть на Xbox
 	<div class="m2__family-apps">
-			<img src="https://sweet.tv/images/v2/index_2022/google_dark.svg">
-			<img src="https://sweet.tv/images/v2/index_2022/apple_dark.svg">
-			<img src="https://sweet.tv/images/v2/index_2022/smart_dark.svg">
-			<img src="https://sweet.tv/images/v2/index_2022/huawei_dark.svg">
+			<img src="https://sweet.tv/images/v2/index_2022/google_dark.svg" alt="">
+			<img src="https://sweet.tv/images/v2/index_2022/apple_dark.svg" alt="">
+			<img src="https://sweet.tv/images/v2/index_2022/smart_dark.svg" alt="">
+			<img src="https://sweet.tv/images/v2/index_2022/huawei_dark.svg" alt="">
 	</div>
 </div>
-
 <div class="tariffis">
 <div class="h3_title tariffs-europe__subscriptions-row-header-column-text">
 	Передплати                            
 </div>
-<p>S</p>
-<p>від 49 грн/міс</p>
-</p>Підключити</p>
+<p>S
+<br> від 49 грн/міс
+<br> Підключити</p>
 
 <p>M</p>
 <p>від 96 грн/міс</p>
-</p>Спробувати за 1 грн</p>
+<p>Спробувати за 1 грн</p>
 <p>Перші 14 днів — за 1 UAH</p>
 
 <p>L</p>
 <p>від 149 грн/міс</p>
 <p>Перші 14 днів — за 1 UAH</p>
-</p>Спробувати за 1 грн</p>
+<p>Спробувати за 1 грн</p>
 
 
 </div>
