--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="styles/style.css">
  </head>
  <body>
-<div class="main-page-ua__header" style="background-image: url(&quot;https://sweet-tv-static.sweet.tv/web/v2/home/UA-header_img-1729162981.png&quot;);"></div>
+<div class="main-page-ua__header" style="background-image: url(&quot;https://sweet-tv-static.sweet.tv/web/v2/home/UA-header_img-1729162981.png&quot;);">
 	<div class="header-seo">
 		<div class="logo">
 			<a href="file:///C:/Users/%D0%94%D0%BE%D0%BC%D0%BE%D0%B2%D0%BE%D0%B9/Desktop/web-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/index.html">
@@ -231,7 +231,7 @@
 <p>Перші 14 днів — за 1 UAH</p>
 <p>Спробувати за 1 грн</p>
 
-
+</div>
 </div>
 </body>
 </html>
