--- a/index.html
+++ b/index.html
@@ -131,50 +131,54 @@
 			<div class="m3__what-item">
 			<p class="gray">Шедеври мультиплікації від Disney, Pixar, DreamWorks та ін. для дітей будь-якого віку та для всієї<br> родини. Дивись українською та без реклами: “Свинка Пеппа”, “Нікчемний Я”, “Рататуй”, “Шрек” та ін.</p>
 			</div>
+
+		<div class="m2__what-wrapper">	
+			<img src="https://sweet.tv/images/v2/index_2022/mult_bird.png" alt="" class="parrot" >
 			<div class="m2__what-tablet">
-                <video class="lozad" data-background-image="https://sweet.tv/images/v2/index_2022/mult_tablet.png" width="100" height="100"  style="background-image: url(&quot;https://sweet.tv/images/v2/index_2022/mult_tablet.png&quot;);">
-                    <source data-src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4" type="video/mp4" src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4">
+                <video class="lozad"   style="background-image: url(&quot;https://sweet.tv/images/v2/index_2022/mult_tablet.png&quot;);">
+                    <source src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4" type="video/mp4">
                 </video>
-                <img src="https://sweet.tv/images/v2/index_2022/mult_bird.png" alt="" class="parrot" >
+                
             </div>
+		</div>
+
 	<div class="m2__studios">
 		<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg" width="95" height="56" alt="">
 		<img src="https://sweet.tv/images/v2/index_2022/disney.svg" width="115" height="41" alt="">
 		<img src="https://sweet.tv/images/v2/index_2022/sony.svg" width="40" height="61" alt="">
 		<img src="https://sweet.tv/images/v2/index_2022/warner.svg" width="52" height="53" alt="">
-	</div>
-	</div>			
-	<div class="sports">
-			<h3>Спорт</h3>
+	</div> 		
+	<div class="sports-section">
+  		<div class="sports-text">
+			<h2>Спорт</h2>
 			<h3>Європейський футбол</h3>
 			<p class="gray">Трансляції футбольних чемпіонатів Англії, Німеччини та Бельгії.</p>
 			<h3>Спортивні події</h3>
 			<p class="gray">Яскраві спортивні події зі світу UFC, NHL, NBA, MLB, Formula 1<br> і Formula E, турніри з тенісу, снукеру, гольфу та ін.</p>
-			</div>
-			<img src="https://sweet.tv/images/v2/index_2022/sport.png" alt="" width="500" height="350" class="img_sport">
-			
-			<div class="ROZETKA" >
-			<h1>Огляд SWEET.TV від ROZETKA</h1>
-			<p>Незалежні експерти з ROZETKA оцінили SWEET.TV та розповіли про сервіс на своєму каналі у YouTube</p>
-			<div class="ROZETKA_video">
-				<iframe  src="https://www.youtube.com/embed/ag21zj6G1no" width="490" height="250" >
-				</iframe>
-			</div>
-			</div>	
-	</div>
-
-	<div class="m2__subsrc_lozad">
-            <h1> Даруємо 7 днів
-			<br>передплати</h1>
-			<h3>Дивись ТБ і кіно 7 днів без обмежень</h3>
-		<div class="free_7">	
-				<p>Отримати в подарунок передплату на 7 днів</p>            
 		</div>
-    </div>
+		<div class="sports--wrapper">
+    		<img src="https://sweet.tv/images/v2/index_2022/sport.png" alt="sport" class="sports-video">
+ 		</div>
+	</div>	
+		<div class="rozetka" >
+			<h1>Огляд SWEET.TV від ROZETKA</h1>
+			<p class="gray">Незалежні експерти з ROZETKA оцінили SWEET.TV та розповіли про сервіс на своєму каналі у YouTube</p>
+				<iframe  src="https://www.youtube.com/embed/ag21zj6G1no" width="700" height="380" >
+				</iframe>
+	</div>
+	<section class="gift-promo" data-background-image="https://sweet.tv/images/v2/index_2022/bg-subscr.jpg" data-loaded="true" style="background-image: url(&quot;https://sweet.tv/images/v2/index_2022/bg-subscr.jpg&quot;);">
+		<div class="m2__subsrc_lozad">
+				<h2> Даруємо 7 днів <br>передплати</h2>
+				<h3>Дивись ТБ і кіно 7 днів без обмежень</h3>
+			<div class="free_7">	
+				<p>Отримати в подарунок <br> передплату на 7 днів</p>            
+			</div>
+		</div>
+	</section>
 
 	<div class="m2__sveet">
 		<div class="m2__people m2__left-people">
-			<img src="https://sweet.tv/images/v2/index_2022/people_left.png" alt="" width="288" height="258">
+			<img src="https://sweet.tv/images/v2/index_2022/people_left.png" width="490" height="440" alt="people">
 		</div>
 	<div class="m2_logo">
 		<img src="https://sweet.tv/images/v2/index_2022/logo_full.svg" alt="" width="245" height="71">
@@ -187,25 +191,25 @@
 		<span>6</span>
 		<span>2</span>
 		<span>3</span>
-		<p>Людей вже спробувало SWEET.TV</p>
+		<p class="gray">Людей вже спробувало SWEET.TV</p>
 </div>
 <div class="m2__people m2__right-people">
-	<img src="https://sweet.tv/images/v2/index_2022/people_right.png" width="288" height="258" alt="people">
+	<img src="https://sweet.tv/images/v2/index_2022/people_right.png" width="490" height="440" alt="people">
 </div>
 
 <div class="m2__sound-img">
-	<img class="img_wauto_hauto lozad" width="950" height="578" src="https://sweet.tv/images/v2/index_2022/microphone.png" data-src="https://sweet.tv/images/v2/index_2022/microphone.png" alt="">
+	<img class="img_wauto_hauto lozad" width="950" height="578" src="https://sweet.tv/images/v2/index_2022/microphone.png"  alt="">
 </div>
-<div class="h3_title">Насолоджуйся<br> ексклюзивним<br> українським дубляжем
+<div class="h1_title">Насолоджуйся<br> ексклюзивним<br> українським дубляжем
 </div>
-<p>SWEET.TV власними коштами створює авторський дубляж і озвучку для культових голлівудських кінохітів</p>
-</div>
+<p class="gray">SWEET.TV власними коштами створює авторський дубляж і озвучку для <br>культових голлівудських кінохітів</p>
+
 <img src="https://sweet.tv/images/v2/index_2022/bg2-family.webp" width="1450" height="800" alt="">
 
 <div class="m2__family-block">
 	<div class="h2_title">
 		<br>Заощаджуй!<br>Одна передплата для <br>всієї родини         </div>
-	Підключай батьків та близьких до однієї передплати. Активуй SWEET.TV<br> одночасно на 5 пристроях. Програма доступна на телевізорах,<br> смартфонах, ноутбуках, планшетах і навіть на Xbox
+	<div class="five"></div><p class ="gray" >Підключай батьків та близьких до однієї передплати. Активуй SWEET.TV <br> одночасно на 5 пристроях. Програма доступна на телевізорах,<br> смартфонах, ноутбуках, планшетах і навіть на Xbox</p></div>
 	<div class="m2__family-apps">
 			<img src="https://sweet.tv/images/v2/index_2022/google_dark.svg" alt="">
 			<img src="https://sweet.tv/images/v2/index_2022/apple_dark.svg" alt="">
