--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="UK">
+<html lang="uk">
  <head> 
  <meta charset="UTF-8">
  <title>Телебачення і онлайн кинотеатр тільки у SWEET.TV!</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
  </head>
  <body>
-<div class="main-page-ua__header" style="background-image: url(&quot;https://sweet-tv-static.sweet.tv/web/v2/home/UA-header_img-1729162981.png&quot;);">
-	<div class="header-seo">
+<header class="main-page-ua__header" style="background-image: url(&quot;https://sweet-tv-static.sweet.tv/web/v2/home/UA-header_img-1729162981.png&quot;);">
+	<section class="header-seo">
 		<div class="logo">
 			<a href="file:///C:/Users/%D0%94%D0%BE%D0%BC%D0%BE%D0%B2%D0%BE%D0%B9/Desktop/web-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/index.html">
 			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Sweet.tv_logo.svg/2560px-Sweet.tv_logo.svg.png" alt="sweet.tv" width="140" height="26"></a>
@@ -29,8 +30,7 @@
 			Спробувати безкоштовно                   
 		</div>
 	</div>
-	</div>
-	-
+	</section>
 	<div class="content">
 		<h1>Світові новинки кіно<br>та телебачення на<br><strong>SWEET.TV</strong></h1>
 		<button>Підключити безкоштовні 7 днів</button>
@@ -126,7 +126,7 @@
 				<img src="https://sweet.tv/images/v2/index_2022/sony.svg" width="40" height="61" alt="">
 				<img src="https://sweet.tv/images/v2/index_2022/warner.svg" width="52" height="53" alt="">
 	</div>   
-	<div data-aos="fade-up" >
+	<section class="Cartoon" >
 			<h1>Мультфільми</h1>
 			<div class="m3__what-item">
 			<p class="gray">Шедеври мультиплікації від Disney, Pixar, DreamWorks та ін. для дітей будь-якого віку та для всієї<br> родини. Дивись українською та без реклами: “Свинка Пеппа”, “Нікчемний Я”, “Рататуй”, “Шрек” та ін.</p>
@@ -138,9 +138,9 @@
                 <video class="lozad"   style="background-image: url(&quot;https://sweet.tv/images/v2/index_2022/mult_tablet.png&quot;);">
                     <source src="https://sweet-tv-static.sweet.tv/video/main_1/cartoons.mp4" type="video/mp4">
                 </video>
-                
             </div>
 		</div>
+	</section>
 
 	<div class="m2__studios">
 		<img src="https://sweet.tv/images/v2/index_2022/dreamworks.svg" width="95" height="56" alt="">
@@ -176,67 +176,60 @@
 		</div>
 	</section>
 
-	<div class="m2__sveet">
+	<section class="m2__sveet">
 		<div class="m2__people m2__left-people">
 			<img src="https://sweet.tv/images/v2/index_2022/people_left.png" width="490" height="440" alt="people">
 		</div>
-	<div class="m2_logo">
-		<img src="https://sweet.tv/images/v2/index_2022/logo_full.svg" alt="" width="245" height="71">
+		<div class="m2_logo">
+			<img src="https://sweet.tv/images/v2/index_2022/logo_full.svg" alt="" width="245" height="71">
+		</div>
+		<div class="m2__count">
+			<span>2</span>
+			<span>5</span>
+			<span>6</span>
+			<span>0</span>
+			<span>6</span>
+			<span>2</span>
+			<span>3</span>
+			<p class="gray">Людей вже спробувало SWEET.TV</p>
+		</div>
+		<div class="m2__people m2__right-people">
+			<img src="https://sweet.tv/images/v2/index_2022/people_right.png" width="490" height="440" alt="people">
+		</div>
+	</section>
+	<div class="m2__sound-img">
+		<img class="img_wauto_hauto lozad" width="950" height="578" src="https://sweet.tv/images/v2/index_2022/microphone.png"  alt="">
 	</div>
-	<div class="m2__count">
-		<span>2</span>
-		<span>5</span>
-		<span>6</span>
-		<span>0</span>
-		<span>6</span>
-		<span>2</span>
-		<span>3</span>
-		<p class="gray">Людей вже спробувало SWEET.TV</p>
-</div>
-<div class="m2__people m2__right-people">
-	<img src="https://sweet.tv/images/v2/index_2022/people_right.png" width="490" height="440" alt="people">
-</div>
+	<p class="h1_title">Насолоджуйся<br> ексклюзивним<br> українським дубляжем </p>
+	<p class="gray">SWEET.TV власними коштами створює авторський дубляж і озвучку для <br>культових голлівудських кінохітів</p>
 
-<div class="m2__sound-img">
-	<img class="img_wauto_hauto lozad" width="950" height="578" src="https://sweet.tv/images/v2/index_2022/microphone.png"  alt="">
-</div>
-<div class="h1_title">Насолоджуйся<br> ексклюзивним<br> українським дубляжем
-</div>
-<p class="gray">SWEET.TV власними коштами створює авторський дубляж і озвучку для <br>культових голлівудських кінохітів</p>
 
-<img src="https://sweet.tv/images/v2/index_2022/bg2-family.webp" width="1450" height="800" alt="">
-
-<div class="m2__family-block">
-	<div class="h2_title">
-		<br>Заощаджуй!<br>Одна передплата для <br>всієї родини         </div>
-	<div class="five"></div><p class ="gray" >Підключай батьків та близьких до однієї передплати. Активуй SWEET.TV <br> одночасно на 5 пристроях. Програма доступна на телевізорах,<br> смартфонах, ноутбуках, планшетах і навіть на Xbox</p></div>
-	<div class="m2__family-apps">
-			<img src="https://sweet.tv/images/v2/index_2022/google_dark.svg" alt="">
-			<img src="https://sweet.tv/images/v2/index_2022/apple_dark.svg" alt="">
-			<img src="https://sweet.tv/images/v2/index_2022/smart_dark.svg" alt="">
-			<img src="https://sweet.tv/images/v2/index_2022/huawei_dark.svg" alt="">
+	<section class="m2__family-block">
+		<div class="h2_title">
+			<h1>Заощаджуй!<br>Одна передплата для <br>всієї родини</h1>
+			<div class ="gray_1 " >
+			Підключай батьків та близьких до однієї передплати. Активуй SWEET.TV <br> одночасно на 5 пристроях. Програма доступна на телевізорах,<br> смартфонах, ноутбуках, планшетах і навіть на Xbox</div>
+			<div class="m2__family-apps">
+				<a href="https://play.google.com/store/apps/details?id=tv.sweet.player" >
+					<span class="google_play"></span>
+					<img src="https://sweet.tv/images/v2/index_2022/google_dark.svg" alt="google">
+				</a>
+				<a href="https://apps.apple.com/UA/app/sweet-tv/id1356560199">
+					<span class="app_store"></span>
+					<img src="https://sweet.tv/images/v2/index_2022/apple_dark.svg" alt="apple">
+				</a>
+				<a href="https://sweet.tv/faq" target="_blank">
+					<span class="smart_tv" style="padding-left: 10px;"></span>
+					<img src="https://sweet.tv/images/v2/index_2022/smart_dark.svg" alt="smart tv">
+				</a>
+				<a href="https://appgallery.huawei.com/#/app/C101034629" >
+					<span class="app_gallery"></span>
+					<img src="https://sweet.tv/images/v2/index_2022/huawei_dark.svg" alt="huawei">
+				</a>
+			</div>
+		</div>
+	</section>
 	</div>
-</div>
-<div class="tariffis">
-<div class="h3_title tariffs-europe__subscriptions-row-header-column-text">
-	Передплати                            
-</div>
-<p>S
-<br> від 49 грн/міс
-<br> Підключити</p>
-
-<p>M</p>
-<p>від 96 грн/міс</p>
-<p>Спробувати за 1 грн</p>
-<p>Перші 14 днів — за 1 UAH</p>
-
-<p>L</p>
-<p>від 149 грн/міс</p>
-<p>Перші 14 днів — за 1 UAH</p>
-<p>Спробувати за 1 грн</p>
-
-</div>
-</div>
 </body>
 </html>
 
